--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -56,3 +56,19 @@
   width: 100vw;
   margin: 0 auto;
 }
+
+.product-form {
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: row; /* Change to row to align items horizontally */
+  flex-wrap: wrap; /* Allow wrapping for smaller screens */
+  gap: 20px; /* Increased space between fields */
+  padding: 20px; /* Added padding to the form container */
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin: 1rem;
+  margin-top: 30px;
+}
