--- a/src/Pages/ProductDetail/ProductDetail.css
+++ b/src/Pages/ProductDetail/ProductDetail.css
@@ -23,6 +23,7 @@ body {
 
 .main-image img {
   width: 100%;
+  height: 100%;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -120,7 +121,7 @@ h1 {
 }
 
 .size {
-  background-color: #f4f4f4;
+  background-color: #8a8a8a;
   padding: 10px 20px;
   border: none;
   border-radius: 6px;
@@ -130,7 +131,7 @@ h1 {
 }
 
 .size:hover {
-  background-color: #ff5722;
+  background-color: #048700;
   color: white;
 }
 
@@ -190,7 +191,7 @@ h1 {
   margin-left: 20px;
 }
 .size.selected {
-  background-color: #ff5722;
+  background-color: #046a00;
   color: white;
 }
 
