--- a/src/Pages/Cart/Cart.css
+++ b/src/Pages/Cart/Cart.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     margin: 20px auto;
-    max-width: 1200px;
+    width: 95%;
     gap: 20px;
   }
   
@@ -13,6 +13,7 @@
   
   .cart-items-section {
     flex: 2;
+    height: 768px;
     background-color: #fff;
     padding: 20px;
     border-radius: 10px;
@@ -30,9 +31,9 @@
   }
   
   .cart-items-scrollable {
-    max-height: 400px; /* Set maximum height */
-    overflow-y: auto; /* Enable scrolling */
-    padding-right: 10px; /* Add padding for scrollbar */
+    max-height: 690px;
+    overflow-y: auto; 
+    padding-right: 10px; 
   }
   
   .cart-items-scrollable::-webkit-scrollbar {
@@ -65,6 +66,8 @@
   
   .cart-item-details {
     flex: 1;
+    display: flex;
+    gap: 170px;
   }
   
   .cart-item-desc {
@@ -80,7 +83,7 @@
   
   .cart-item-actions {
     display: flex;
-    gap: 10px;
+    gap: 70px;
     align-items: center;
   }
   
@@ -106,8 +109,7 @@
     padding: 35px;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    width: 150%;
-    height: 80%;
+
   }
   
   .summary-card h3 {
